--- a/frontend/src/Components/Inputs/Inputs.css
+++ b/frontend/src/Components/Inputs/Inputs.css
@@ -2,10 +2,59 @@
   display: flex;
   flex-direction: column;
   align-items: start;
+  gap: 1em;
+  padding: 2em;
 }
 
 .task-addition-input {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+#task {
+  border: none;
+  border: 1px solid grey;
+  border-radius: 4px;
+  padding: 0.5em 1em 0.5em 0.5em;
+}
+
+.checkbox-days-label {
+  margin-left: 0.3em;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.checkbox-days {
+  accent-color: green;
+  height: 25px;
+  width: 25px;
+  cursor: pointer;
+}
+
+.checkbox-days:hover {
+  background-color: aqua;
+}
+
+.checkbox-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 0.1em;
+}
+
+.task-label {
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+
+.btn-add-task {
+  border: none;
+  border: 1px solid blue;
+  cursor: pointer;
+  padding: 0.5em 1em;
+  border-radius: 4px;
+  font-size: 1rem;
+  background-color: blue;
+  color: white;
 }
