Grouping the task by days, adding the functionality for the user to change his task when he presses on a certain task.

--- a/frontend/src/Components/Navigation/Navbar.css
+++ b/frontend/src/Components/Navigation/Navbar.css
@@ -4,6 +4,8 @@
   gap: 2em;
   padding: 1.5em 2em;
   border-bottom: 1px solid grey;
+  min-width: 100%;
+  position: sticky;
 }
 
 .navigation > a {
