--- a/frontend/src/Pages/List/List.css
+++ b/frontend/src/Pages/List/List.css
@@ -1,7 +1,7 @@
 .list-main {
   display: flex;
-  flex-direction: column;
-  gap: 0.5em;
+  flex-direction: row;
+  gap: 1.5em;
   padding: 2em;
 }
 
@@ -9,13 +9,50 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 400px;
-  border: 1px solid black;
+  width: 450px;
+  background-color: rgb(97, 97, 97);
   border-radius: 4px;
   padding: 1.5em 0.5em;
+}
+
+.list-task:hover {
+  background-color: rgb(85, 85, 85);
+  transition: 0.1s ease-in;
+}
+
+.list-task > div > p {
+  background-color: transparent;
+  color: white;
+  font-weight: 400;
+  font-size: 0.95rem;
+}
+
+.day-name {
+  font-weight: 500;
+  font-size: 1.3rem;
+  margin-bottom: 1em;
+  background-color: transparent;
+  color: white;
+}
+
+.daily-tasks {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  background-color: rgb(51, 51, 51);
+  height: 700px;
+  width: 500px;
+  padding: 1em 2em;
+  border-radius: 4px;
 }
 
 .btn-delete-task {
   border: none;
   cursor: pointer;
+  background-color: transparent;
+}
+
+.btn-delete-task:hover {
+  color: white;
+  transition: 0.15s ease-in-out;
 }
